# speechcontrol-old

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  INSTALL  README.md  README.tests  TODO  daemonsetup.py  mk-psext  mk-scdirs  packagesetup.py  ps-testing  setup.py  trainersetup.py
cmake/: CMakeLists.txt
cmake/Modules/: CMakeInstallModules.cmake  CMakeProvideUninstallTarget.cmake  CTestMacroExtras.cmake  DBusInstallActivationService.cmake  FindPocketSphinx.cmake  FindSpeechControl.cmake  GetGitRevisionDescription.cmake  ModularCTestSystem.cmake  PkgConfigGetVar.cmake  PkgConfigInstallConfiguration.cmake  SpeechControlDefaults.cmake  SpeechControlMacros.cmake
cmake/Templates/: cmake_uninstall.cmake.in
daemon/: speechdaemon.py
daemon/asr/: backend.py  recognizer.py
daemon/asr/pocketsphinx/: continuous.c  continuous.h  pocketsphinx.c  pocketsphinx.pxd  pocketsphinx.pyx  setup.py
daemon/tests/: backend-test.py  backendtest.py  continuous_asr-test.py  recognizer-test.py  recognizertest.py  testbackend.py
data/listeners/: dummy.spec
doc/doxygen/: CMakeLists.txt
ext/: speechcontrol.xmi
package/speechcontrol/: asr.py  core.py  recognition.py
package/tests/: asr-test.py
package/tests/special/: asr-test.py
res/: CMakeLists.txt
res/data/: CMakeLists.txt  SpeechControl.desktop  speechcontrol.pc.in
res/data/dbus/: org.thesii.SpeechControl.Application.service.in
res/ui/: about-dialog.ui
speechcontrol/: CMakeLists.txt  app.py  setup.py  speechcontrol.py  speechtrainer.py
speechcontrol/asr/: asr.py
speechcontrol/new/: speechcontrol.py
speechcontrol/new/speechcontrol/: app.py
speechcontrol/new/speechcontrol/asr/: backend.py
speechcontrol/old/bindings/cython/: CMakeLists.txt
speechcontrol/old/bindings/cython/libspeechcontrol/: speechcontrol.pxd
speechcontrol/old/lib/: CMakeLists.txt  acousticmodel.cpp  acousticmodel.hpp  decoder.hpp  global.hpp.in  languagemodel.cpp  languagemodel.hpp  speechcontrol.hpp
speechcontrol/old/tests/: TestTemplate.cmake.in  linking.hpp
speechcontrol/speechcontrol/asr/: backend.py
src/: CMakeLists.txt  global.hpp.in
src/app/: main.cpp
src/app/sessions/: adaptionutility.cpp  session.cpp
src/app/ui/settings/: models-pane.cpp
src/app/ui/wizards/adapt/: modelselection.cpp
src/bindings/: CMakeLists.txt
src/bindings/cython/: CMakeLists.txt  qt.pxd
src/bindings/cython/libspeechcontrol/: speechcontrol.pxd  speechcontrol.pyx
src/daemon/: CMakeLists.txt  instance.cpp  instance.hpp  listener.cpp  listener.hpp  main.cpp  speechcontrol.cpp
src/daemon/dbus/: adaptor.cpp  adaptor.hpp
src/daemon/listeners/: loader.cpp  loader.hpp  plugin.cpp  plugin.hpp
src/decoders/: CMakeLists.txt
src/kde/: CMakeLists.txt
src/lib/: CMakeLists.txt  acousticmodel.cpp  acousticmodel.hpp  agent.cpp  agent.hpp  decoder.cpp  decoder.hpp  decoderprivate.cpp  decoderprivate.hpp  export.hpp  global.hpp.in  languagemodel.cpp  languagemodel.hpp  languagemodelprivate.cpp  languagemodelprivate.hpp  noisedictionary.hpp  recognizer.cpp  recognizer.hpp  speechcontrol.hpp
src/lib/sphinx/: abstract.cpp  abstract.cxx  abstract.hpp  abstractprivate.hpp
src/listeners/: CMakeLists.txt
src/listeners/dummy/: CMakeLists.txt  dummy.cpp  dummy.hpp  dummylistener.cpp  dummylistener.hpp  dummyplugin.cpp  dummyplugin.hpp
src/listeners/pocketsphinx/: CMakeLists.txt  pocketsphinxlistener.cpp  pocketsphinxlistener.hpp  pocketsphinxplugin.cpp  pocketsphinxplugin.hpp
src/plugins/desktopctl/src/api/: sphinx.cpp  sphinx.hpp
src/plugins/dictation/src/: sphinx.cpp  sphinx.hpp
src/tests/: CMakeLists.txt  CTestConfig.cmake  TestTemplate.cmake.in  init.cpp  init.hpp
test/: CTestConfig.cmake
trainer/: speechtrainer.py
